@startuml DER-Logistica
hide circle
skinparam linetype ortho

note as db_note
  **Esquema:** logistica
  **Motor:** PostgreSQL
end note

entity "Camion" as Camion {
  [PK] camion_id
  --
  patente : VARCHAR(255)
  --
  capacidad_volumen : DOUBLE PRECISION
  --
  altura : DOUBLE PRECISION
  --
  capacidad_carga : DOUBLE PRECISION
}

entity "Chofer" as Chofer {
  [PK] chofer_id
  --
  legajo : VARCHAR(255)
  --
  nombre : VARCHAR(255)
}

entity "SolicitudPlanificacion" as SolicitudPlanificacion {
  [PK] solicitud_planificacion_id
  --
  fecha_solicitud : TIMESTAMP
  --
  estado : VARCHAR(50)
}

entity "RutaReparto" as RutaReparto {
  [PK] ruta_reparto_id
  --
  [FK] solicitud_planificacion_id
  --
  [FK] camion_id
  --
  [FK] chofer_id
  --
  fecha_operativa : DATE
  --
  iniciada : BOOLEAN
}

entity "Parada" as Parada {
  [PK] parada_id
  --
  [FK] ruta_reparto_id
  --
  orden : INTEGER
  --
  calle : VARCHAR(255)
  --
  altura : VARCHAR(255)
  --
  localidad : VARCHAR(255)
  --
  latitud : DOUBLE PRECISION
  --
  longitud : DOUBLE PRECISION
}

entity "Entrega" as Entrega {
  [PK] entrega_id
  --
  [FK] parada_id
  --
  id_donacion : UUID
  --
  estado : VARCHAR(50)
  --
  peso_estimado : DOUBLE PRECISION
  --
  volumen_estimado : DOUBLE PRECISION
  --
  comprobante_fecha_hora : TIMESTAMP
  --
  comprobante_fotos : TEXT
  --
  comprobante_camion_patente : VARCHAR(255)
  --
  justificacion_fallo : TEXT
}

entity "ItemPlanificacion" as ItemPlanificacion {
  [PK] item_planificacion_id
  --
  [FK] solicitud_planificacion_id
  --
  id_donacion : UUID
  --
  peso_estimado : DOUBLE PRECISION
  --
  volumen_estimado : DOUBLE PRECISION
  --
  calle_destino : VARCHAR(255)
  --
  altura_destino : VARCHAR(255)
  --
  localidad_destino : VARCHAR(255)
}

' Relaciones
SolicitudPlanificacion ||--o{ RutaReparto 
RutaReparto ||--|| Camion 
RutaReparto ||--|| Chofer 
RutaReparto ||--o{ Parada 
Parada ||--o{ Entrega 
SolicitudPlanificacion ||--o{ ItemPlanificacion 

@enduml